--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,9 @@
     <script src="lib/jasmine/jasmine.js"></script>
     <script src="lib/jasmine/jasmine-html.js"></script>
     <script src="lib/jasmine-jquery/jasmine-jquery.js"></script>
+    <script>
+      ga = function() {};
+    </script>
   </head>
 
   <body>
